--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.11.6",
     "github-markdown-css": "^5.2.0",
     "react": "^18.2.0",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-remarkable": "^1.1.3",
