--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.10.6",
     "framer-motion": "^10.11.6",
     "github-markdown-css": "^5.2.0",
+    "highlight.js": "^11.7.0",
+    "marked": "^4.3.0",
     "react": "^18.2.0",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
